
  * debian/patches:
      - Add 07 patch to update manpage adjtimex.8:
        . Add a few new timex status from kernel parameter.
          Thanks to Chris Hiestand <chiestand@salk.edu>. (Closes: #759399)
        . Update the example to explain --frequency calculation.
          Thanks to Marco Marongiu <brontolinux@gmail.com>.
          (Closes: #743444)

 -- Roger Shimizu <rogershimizu@gmail.com>  Sun, 23 Oct 2016 23:00:48 +0900

adjtimex (1.29-8) unstable; urgency=medium

  * debian/patches:
      - Improve precision. Thanks Christopher Alexander Tobias Schulze.
        (Closes: #633082).
      - Update patches to make compatible with "gbp pq" command.
  * Upgrade to support debhelper 10
  * debian/copyright:
      - Update URL to make use of https instead of http, when possible
  * debian/control:
      - Add lsb-base as dependency to package shadowsocks-libev, since
        the init script sources /lib/lsb/init-functions utility functions
      - Bump policy version to 3.9.8 (no actual change required)
  * debian/adjtimex.service:
      - Add documentation line. Thanks to lintian.
  * debian/rules:
      - Add a few comments
      - Remove hardening setting already enabled by default since compat=9

 -- Roger Shimizu <rogershimizu@gmail.com>  Sun, 23 Oct 2016 11:31:38 +0900

adjtimex (1.29-7) unstable; urgency=medium

  * remove the wrong debian/dirs line in changelog of previous version 1.29-6
  * debian/patches:
      - Replace patch 03 with the one by Bjarni I. Gislason, which also
        minimizes the time of lock over "/dev/rtc" (Closes: #724929).
      - Fix potential uninitialized memory accessing
        (thanks peppe <g1pi@libero.it>, Closes: #688933).
      - Avoid a few gcc warnings
  * debian/copyright: Add copyright for newly added patch
  * debian/adjtimexconfig:
      - Move tmp file during executing from /etc to /tmp.
      - Code clean up.
  * debian/templates + debian/config + debian/po + debian/NEWS: